# embedded_abc

./: .gitignore  README.md  configure.sh
00_core_clk/: README.md  main.c
00_sysclk/: CMakeLists.txt  README.md  main.c
01_systick/: CMakeLists.txt  README.md  main.c
02_gpio_out/: README.md  main.c
03_spi_bit_bang/: README.md  main.c
04_uart/: README.md  main.c
05_i2c/: README.md  main.c
06_gpio_in/: README.md  STM32F051R8TX_FLASH.ld  main.c
07_pwm/: README.md  main.c
shell/: download.sh  rebuild.sh  rebuild_download.sh  util.sh
